--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
 
               <div id="mc_embed_signup">
-              <form action="https://flyingpenguin.us17.list-manage.com/subscribe/post?u=658692acf20aff0fd1c3982b8&amp;id=8ff8facadd" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <form action="https://flyingpenguin.us17.list-manage.com/subscribe/post?u=658692acf20aff0fd1c3982b8&amp;id=8ff8facadd" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                   <div id="mc_embed_signup_scroll">
 
                   <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
